# CodeWars

./: CMakeLists.txt  googleTest.cpp  testy.cpp
3kyu/: divideInt.cpp  magicCompare.cpp  theBooleanOrder.cpp
4kyu/: RangeExtraction.cpp  Vigenère.cpp  connectFour.cpp  grazingDonkey.cpp  nextBiggerNumber.cpp  romanNumerls.cpp  snail.cpp  sumStrings.cpp
5kyu/: pickPeacks.cpp  primeTime.cpp  spitStrings.cpp
